--- a/notebooks/explore_jobs.ipynb
+++ b/notebooks/explore_jobs.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "4e82c0b5-8a98-4e8f-9f36-d1844681514f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------------------------------------------------------\n",
-    "# 🛠️ 1. Import libraries\n",
+    "# 📦 1. Import libraries\n",
     "# ---------------------------------------------------------\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "331cf1ce-0ec8-464e-b72b-c175095ea47c",
    "metadata": {
     "scrolled": true
@@ -246,7 +247,7 @@
        "4  https://remoteOK.com/remote-jobs/remote-social...      NaN      NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "c7ea1bcc-529b-43db-8065-aa6c11e6b90f",
    "metadata": {
     "scrolled": true
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "f2cfd9dd-b7c5-44ac-924c-64dec0645184",
    "metadata": {},
    "outputs": [
@@ -305,7 +306,7 @@
        " 'verified']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "7c582f26-884a-4317-a961-f0e9f9b5bf31",
    "metadata": {},
    "outputs": [
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "70c89256-fcca-4670-99e3-55a8ab0147b5",
    "metadata": {},
    "outputs": [
@@ -734,7 +735,7 @@
        "max                                                   NaN      NaN      NaN  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "e5a372d0-045b-4356-889b-21e626dbb024",
    "metadata": {},
    "outputs": [
@@ -773,7 +774,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,39 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e97d2ca9-5c15-49d6-902e-aad142d2113d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6c3689d-3c73-436d-b74c-8cc83f9fbe5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0418856b-c8e4-478c-8d18-e0ff89c03531",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f3b50f9-7582-4e94-83d6-9ad150c7f988",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "2088c1c1-4c79-4759-8e44-92f14d096279",
    "metadata": {},
    "outputs": [
@@ -973,7 +942,7 @@
        "4  https://remoteOK.com/remote-jobs/remote-social...      NaN      NaN  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,15 +958,14 @@
     "    \"location\": \"Location\",\n",
     "    \"date\": \"Posted Date\",\n",
     "    \"description\": \"Description\",\n",
-    "    \"tags\": \"Tags\",\n",
-    "    \"job_type\": \"Job Type\"\n",
+    "    \"tags\": \"Tags\"\n",
     "})\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "69dba29e-99f1-4383-8a21-8ce66b7028ce",
    "metadata": {},
    "outputs": [
@@ -1012,7 +980,7 @@
        "Name: Posted Date, dtype: datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "dff85efc-df10-48b6-a8cf-e9a514f4271e",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1005,7 @@
        "(99, 12)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1020,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
+   "id": "16c53440-c9a8-48c0-9137-e30ebbd9230f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace empty strings in 'Location' with NaN\n",
+    "df[\"Location\"] = df[\"Location\"].replace(\"\", np.nan)\n",
+    "\n",
+    "# Drop rows where 'Location' is now NaN\n",
+    "df = df.dropna(subset=[\"Location\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "0c7b6771-67a9-4d66-9c7a-76e0b05e52bf",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1042,6 @@
      "data": {
       "text/plain": [
        "Location\n",
-       "                                                                          47\n",
        "Remote                                                                    15\n",
        "United States                                                              9\n",
        "Los Angeles, Ca                                                            2\n",
@@ -1070,10 +1051,11 @@
        "Remote, Singapore &Amp; Hk Preferred - Other Apac Locations Considered     1\n",
        "Remote - United States Only                                                1\n",
        "San Francisco, Ca                                                          1\n",
+       "Na                                                                         1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,32 +1075,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f2e3e0ee-62d0-42b1-ad6f-887115114d7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -----------------------------------------------\n",
+    "# 💾 Save Cleaned Data to JSON\n",
+    "# -----------------------------------------------\n",
+    "df.to_json(\"../data/jobs_cleaned.json\", orient=\"records\", indent=4)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6856202e-f363-48a4-be50-99aae68f8a81",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5ea588c-4b7c-40af-855a-d8a800daabf5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a254f3d4-1d2a-4f6a-a650-397b3632bf35",
+   "id": "a30d3566-5514-417b-949f-5580b0d9bff3",
    "metadata": {},
    "outputs": [],
    "source": []
